--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es2020",
     "module": "commonjs",
-    "lib": ["es2015", "es2020"],
+    "lib": ["es2020", "DOM"],
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
