--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,5 +20,7 @@ jobs:
         run: npm run start
       - name: Commit and push
         run: |
+         git config --global user.name "Github CI"
+         git config --global user.email "ci@users.noreply.github.com"
          git commit -a -m "Publish a new article"
          git push
