Publish every day at 18:30

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
 name: Publish a new article
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '30 18 * * *'
+  workflow_dispatch:
 
 jobs:
   publish:
