--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish a new article
 
 on:
   schedule:
-    - cron: '30 18 * * *'
+    - cron: '45 16 * * *'
   workflow_dispatch:
 
 jobs:
@@ -23,7 +23,8 @@ jobs:
         run: npm run start
       - name: Commit and push
         run: |
-         git config --global user.name "Github CI"
-         git config --global user.email "ci@users.noreply.github.com"
-         git commit -a -m "Publish a new article"
-         git push
+          git config --global user.name "Github CI"
+          git config --global user.email "ci@users.noreply.github.com"
+          git add .
+          git commit -a -m "Publish a new article"
+          git push
