--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,14 +2,16 @@ name: Publish a new article
 
 on:
   schedule:
-    - cron: '45 16 * * *'
+    - cron: '0 17 * * *'
   workflow_dispatch:
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
@@ -21,10 +23,4 @@ jobs:
           WORDS_COUNT: 300
           LANGUAGE: en
         run: npm run start
-      - name: Commit and push
-        run: |
-          git config --global user.name "Github CI"
-          git config --global user.email "ci@users.noreply.github.com"
-          git add .
-          git commit -a -m "Publish a new article"
-          git push
+      - uses: stefanzweifel/git-auto-commit-action@v4
